# RadRoverRescue

./: CMakeLists.txt  README.md  compile_commands.json  do-docs.bash  do-tests.bash  package.xml
.github/workflows/: main.yml  run-unit-test-and-upload-codecov.yml
cmake-modules/: OpenCVConfig.cmake
docs/html/: Manipulation_8hpp.html  Manipulation_8hpp__dep__incl.map  Manipulation_8hpp__dep__incl.md5  Manipulation_8hpp__incl.map  Manipulation_8hpp__incl.md5  Manipulation_8hpp_source.html  Navigation_8hpp.html  Navigation_8hpp__dep__incl.map  Navigation_8hpp__dep__incl.md5  Navigation_8hpp__incl.map  Navigation_8hpp__incl.md5  Navigation_8hpp_source.html  Perception_8hpp.html  Perception_8hpp__dep__incl.map  Perception_8hpp__dep__incl.md5  Perception_8hpp__incl.map  Perception_8hpp__incl.md5  Perception_8hpp_source.html  RRR_8hpp.html  RRR_8hpp__incl.map  RRR_8hpp__incl.md5  RRR_8hpp_source.html  annotated.html  classManipulation-members.html  classManipulation.html  classManipulation__coll__graph.map  classManipulation__coll__graph.md5  classManipulation__inherit__graph.map  classManipulation__inherit__graph.md5  classNavigation-members.html  classNavigation.html  classNavigation__coll__graph.map  classNavigation__coll__graph.md5  classNavigation__inherit__graph.map  classNavigation__inherit__graph.md5  classPerception-members.html  classPerception.html  classPerception__coll__graph.map  classPerception__coll__graph.md5  classPerception__inherit__graph.map  (+67 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_1.js  variables_2.js  (+7 more)
include/: Manipulation.hpp  Navigation.hpp  Perception.hpp  RRR.hpp
launch/: bins.launch.py  new.launch.py  waste_collect.launch.py
maps/: my_map.pgm  my_map.yaml  my_map1.pgm  my_map1.yaml  my_map2.pgm  my_map2.yaml
models/mud_box/: model.config  model.sdf
models/powerplant/: model.config  model.sdf
results/: cppcheck.txt  cpplint.txt
scripts/: generate_coverage_report.bash
src/: Manipulation.cpp  Navigation.cpp  Perception.cpp  main.cpp  rrr.cpp
test/: main.cpp  manipulation_test.cpp  navigation_test.cpp  perception_test.cpp
worlds/: final3.world
